tambahin export excel

--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -23,7 +23,7 @@
       Logout
     </button>
     <div class="text-center mt-5 mb-4">
-      <h2 class="fw-bold">Dashboard Admin Diklat RSUD Margono</h2>
+      <h2 class="fw-bold">Dashboard Admin Diklat <br> Prof. Dr. Margono Soekarjo Purwokerto</h2>
       <p class="text-muted">Selamat datang di panel administrasi.</p>
     </div>
 
