--- a/frontend/admin/pelatihan.html
+++ b/frontend/admin/pelatihan.html
@@ -4,14 +4,6 @@
     <meta charset="UTF-8" />
     <title>Admin - Kelola Pelatihan</title>
 
-    <!-- PROTEKSI LOGIN ADMIN -->
-    <script>
-      const admin = localStorage.getItem("admin");
-      if (!admin) {
-        window.location.href = "loginadmin.html";
-      }
-    </script>
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -212,6 +204,17 @@
               </div>
 
               <div class="col-md-4">
+                <label class="form-label">Harga Pelatihan (Rp)</label>
+                <input
+                  type="number"
+                  name="harga"
+                  class="form-control"
+                  min="0"
+                  placeholder="Contoh: 250000"
+                />
+              </div>
+
+              <div class="col-md-4">
                 <label class="form-label">Kategori Peserta</label>
                 <select name="kategori" class="form-control">
                   <option value="Umum">Umum</option>
@@ -354,6 +357,7 @@
                 <th>Waktu Mulai</th>
                 <th>Waktu Selesai</th>
                 <th>Kuota Peserta</th>
+                <th>Harga</th>
                 <th>Kategori Peserta</th>
                 <th>Tipe Pelatihan</th>
                 <th>Durasi Pelatihan</th>
@@ -451,6 +455,13 @@
                 <td>${formatWaktu(item.waktu_mulai)}</td>
                 <td>${formatWaktu(item.waktu_selesai)}</td>
                 <td>${item.kuota ?? "-"}</td>
+                <td>
+                  ${
+                    item.harga > 0
+                      ? "Rp " + Number(item.harga).toLocaleString("id-ID")
+                      : "Gratis"
+                  }
+                </td>
                 <td>${item.kategori ?? "-"}</td>
                 <td>${item.tipe_pelatihan ?? "-"}</td>
                 <td>${item.durasi ?? "-"}</td>
