--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -4,14 +4,6 @@
     <meta charset="UTF-8" />
     <title>Admin - Pembayaran Peserta</title>
 
-    <!-- PROTEKSI LOGIN ADMIN -->
-    <script>
-      const admin = localStorage.getItem("admin");
-      if (!admin) {
-        window.location.href = "loginadmin.html";
-      }
-    </script>
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -183,6 +175,7 @@
                 <th>No</th>
                 <th>Nama Peserta</th>
                 <th>Pelatihan</th>
+                <th>Harga</th>
                 <th>No WA</th>
                 <th>Email</th>
                 <th>Bukti Transfer</th>
@@ -269,6 +262,10 @@
                 <td>${index + 1}</td>
                 <td>${item.nama_peserta}</td>
                 <td>${item.nama_pelatihan}</td>
+                <td>Rp ${Number(item.harga_pelatihan).toLocaleString(
+                  "id-ID"
+                )}</td>
+
                 <td>${item.no_wa}</td>
                 <td>${item.email}</td>
 
