--- a/frontend/menupelatihan.html
+++ b/frontend/menupelatihan.html
@@ -316,6 +316,8 @@
                           <p><b>Selesai:</b> <span id="modalSelesai"></span></p>
                           <p><b>Lokasi:</b> <span id="modalLokasi"></span></p>
                           <p><b>Kuota:</b> <span id="modalPeserta"></span></p>
+                          <p><b>Biaya:</b> <span id="modalHarga"></span></p>
+
 
                           <button 
                             class="btn btn-outline" 
@@ -358,6 +360,13 @@
                           });
                         }
 
+                        // ====== FORMAT RUPIAH  ======
+                        function formatRupiah(angka) {
+                          const nilai = Number(angka) || 0;
+                          return "Rp " + nilai.toLocaleString("id-ID");
+                        }
+
+
                         function formatWaktu(waktuDB) {
                           return waktuDB ? waktuDB.substring(0, 5) + " WIB" : "-";
                         }
@@ -367,11 +376,31 @@
                           const res = await fetch(API);
                           const data = await res.json();
 
-                          // Simpan data publish
-                          allPelatihan = data.filter(item => item.status === "publish");
+                          // Urutkan dari yg masih bisa daftar
+                        allPelatihan = data
+                        .filter(item => item.status === "publish")
+                        .sort((a, b) => {
+                          const today = new Date().setHours(0,0,0,0);
 
-                          // Render default (semua)
-                          renderPelatihan(allPelatihan);
+                          const aDate = new Date(a.tanggal_mulai).setHours(0,0,0,0);
+                          const bDate = new Date(b.tanggal_mulai).setHours(0,0,0,0);
+
+                          // Tentukan status daftar
+                          const aAvailable = a.sisa_kuota > 0 && aDate >= today;
+                          const bAvailable = b.sisa_kuota > 0 && bDate >= today;
+
+                          // 1️⃣ Yang masih bisa daftar di atas
+                          if (aAvailable && !bAvailable) return -1;
+                          if (!aAvailable && bAvailable) return 1;
+
+                          // 2️⃣ Sama-sama bisa daftar → urutkan tanggal terdekat
+                          if (aAvailable && bAvailable) return aDate - bDate;
+
+                          // 3️⃣ Sama-sama tidak bisa daftar → tanggal terbaru di atas
+                          return bDate - aDate;
+                        });
+
+                      renderPelatihan(allPelatihan);
                         }
 
                         // ===================== RENDER CARD PELATIHAN =====================
@@ -475,6 +504,11 @@
 
                           document.getElementById("modalPeserta").innerText =
                             p.sisa_kuota + " / " + p.kuota;
+
+                          document.getElementById("modalHarga").innerText =
+                          p.harga && p.harga > 0
+                            ? formatRupiah(p.harga)
+                            : "Gratis";
 
                             // =============================
                             // LOGIKA: Tanggal Sudah Lewat
