--- a/frontend/admin/institusi.html
+++ b/frontend/admin/institusi.html
@@ -86,12 +86,12 @@
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
                   <a class="dropdown-item" href="fasilitator.html"
-                    >Profesional Fasilitator</a
+                    >Profesional Fasilitor & Instruktur Tersertifikasi</a
                   >
                 </li>
                 <li>
                   <a class="dropdown-item" href="penyelenggara.html"
-                    >Tim Penyelenggara</a
+                    >Tim Penyelenggara Pelatihan Tersertifikasi</a
                   >
                 </li>
                 <li>
