--- a/frontend/admin/pembayaran.html
+++ b/frontend/admin/pembayaran.html
@@ -78,12 +78,12 @@
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
                   <a class="dropdown-item" href="fasilitator.html"
-                    >Fasilitator</a
+                    >Profesional Fasilitor & Instruktur Tersertifikasi</a
                   >
                 </li>
                 <li>
                   <a class="dropdown-item" href="penyelenggara.html"
-                    >Penyelenggara</a
+                    >Tim Penyelenggara Pelatihan Tersertifikasi</a
                   >
                 </li>
                 <li>
