--- a/frontend/admin/fasilitator.html
+++ b/frontend/admin/fasilitator.html
@@ -86,12 +86,12 @@
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
                   <a class="dropdown-item" href="fasilitator.html" 
-                    >Profesional Fasilitator</a
+                    >Profesional Fasilitor & Instruktur Tersertifikasi</a
                   >
                 </li>
                 <li>
                   <a class="dropdown-item" href="penyelenggara.html"
-                    >Tim Penyelenggara</a
+                    >Tim Penyelenggara Pelatihan Tersertifikasi</a
                   >
                 </li>
                 <li>
@@ -204,7 +204,7 @@
     <!-- JS CRUD -->
     <script>
       document.addEventListener("DOMContentLoaded", () => {
-        const API = "http://localhost:5000/api/fasilitator?admin=1";
+        const API = "http://localhost:5000/api/fasilitator";
         const tableBody = document.getElementById("tableFasilitator");
         const form = document.getElementById("formFasilitator");
 
@@ -233,7 +233,7 @@
                 <td>${index + 1}</td>
                 <td><img src="http://localhost:5000/uploads/fasilitator/${
                   item.foto
-                }" class="thumb-foto">
+                }" class="thumb-foto" style="width:70px;height:70px;object-fit:cover";>
                 </td>
                 <td>${item.nama}</td>
                 <td>${item.keterangan ?? "-"}</td>
