--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -279,10 +279,9 @@
             <div class="social-links-panel">
               <h5>Follow Us</h5>
               <div class="social-icons">
+                <a href="https://x.com/rsudmargono"><i class="bi bi-twitter-x"></i></a>
                 <a href="https://www.facebook.com/RSMargono/"><i class="bi bi-facebook"></i></a>
-                <!-- <a href="#"><i class="bi bi-twitter-x"></i></a> -->
                 <a href="https://www.instagram.com/rsudmargono/"><i class="bi bi-instagram"></i></a>
-                <!-- <a href="#"><i class="bi bi-linkedin"></i></a> -->
                 <a href="https://www.youtube.com/@rsmargono"><i class="bi bi-youtube"></i></a>
               </div>
             </div>
@@ -292,42 +291,6 @@
             <div class="map-container">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31649.59407144157!2d109.28226985317272!3d-7.443193156994608!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e655c1da44567c1%3A0xd33981254b97b001!2sRSUD%20Prof.%20Dr.%20Margono%20Soekarjo%20Purwokerto!5e0!3m2!1sen!2sid!4v1762218137678!5m2!1sen!2sid" width="100%" height="100%"" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <!-- <div class="form-container">
-              <h3>Send Us a Message</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mauris hendrerit faucibus imperdiet nec eget felis.</p>
-
-              <form action="forms/contact.php" method="post" class="php-email-form">
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="nameInput" name="name" placeholder="Full Name" required="">
-                  <label for="nameInput">Full Name</label>
-                </div>
-
-                <div class="form-floating mb-3">
-                  <input type="email" class="form-control" id="emailInput" name="email" placeholder="Email Address" required="">
-                  <label for="emailInput">Email Address</label>
-                </div>
-
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="subjectInput" name="subject" placeholder="Subject" required="">
-                  <label for="subjectInput">Subject</label>
-                </div>
-
-                <div class="form-floating mb-3">
-                  <textarea class="form-control" id="messageInput" name="message" rows="5" placeholder="Your Message" style="height: 150px" required=""></textarea>
-                  <label for="messageInput">Your Message</label>
-                </div>
-
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-
-                <div class="d-grid">
-                  <button type="submit" class="btn-submit">Send Message <i class="bi bi-send-fill ms-2"></i></button>
-                </div>
-              </form>
-            </div> -->
           </div>
         </div>
       </div>
@@ -341,63 +304,48 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">MediTrust</span>
+            <span class="sitename">DIKLAT RSMS</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Jl. Dr. Gumbreg No.1, Kebontebu, Berkoh, </p>
+            <p>Kec. Purwokerto Sel., Kabupaten Banyumas,</p>
+            <p>Jawa Tengah 53146</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>(0281) 632704</span></p>
+            <p><strong>Email:</strong> <span>rsmargono@jatengprov.go.id</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/rsudmargono"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/RSMargono/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/rsudmargono/"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.youtube.com/@rsmargono"><i class="bi bi-youtube"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Kontak</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Pelatihan</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="menupelatihan.html">Menu Pelatihan</a></li>
+            <li><a href="daftarpelatihan.html">Daftar Pelatihan</a></li>
+            <li><a href="kalender.html">Kalender Pelatihan</a></li>
+            <li><a href="alurpendaftaran.html">Alur Pendaftaran</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
+        <div class="col-lg-4 col-md-3 footer-links">
+          <h4>Tim & Mitra Pelatihan</h4>
           <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
-          <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
+            <li><a href="fasilitator.html">Profesional Fasilitor dan Instruktur</a></li>
+            <li><a href="penyelenggara.html">Tim Penyelenggara Pelatihan</a></li>
+            <li><a href="instruktur.html">Institusi Kerjasama</a></li>
           </ul>
         </div>
 
@@ -405,7 +353,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">MyWebsite</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">RSUD Prof. Dr. Margono Soekarjo</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
