--- a/frontend/intitusi.html
+++ b/frontend/intitusi.html
@@ -256,7 +256,7 @@
                     : `http://localhost:5000/uploads/institusi/default.png`;
 
                   const card = `
-                    <div class="col-lg-2" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-lg-2 mt-5 ms-5" data-aos="zoom-in" data-aos-delay="200">
                       <div class="department-card">
 
                         <div class="department-header">
